[package]
name = "sensor-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.11.1"
msgpack_simple = "1.0.2"
log = "0.4"
soundio = "*"
futures = "*"
async-trait = "*"
bytebuffer = "*"